add_subdirectory(top)

add_executable(1001_1 1001.cpp)
add_executable(1002 1002.cpp)
add_executable(1002_fix 1002_fix.cpp)
add_executable(1002_fix2 1002_fix2.cpp)
add_executable(1002_fix3 1002_fix3.cpp)
add_executable(1003 1003_correct.cpp)
add_executable(1004 1004.cpp)
add_executable(1004_correct 1004_correct.cpp)
add_executable(1010 1010.cpp)
add_executable(1010_correct 1010_correct.cpp)